added grid mapper simulation

--- a/src/khan/grid_mapper/CMakeLists.txt
+++ b/src/khan/grid_mapper/CMakeLists.txt
@@ -38,4 +38,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 add_executable(grid_mapper  src/grid_mapper.cpp)
 target_link_libraries(grid_mapper ${catkin_LIBRARIES})
 target_link_libraries(grid_mapper ${OpenCV_LIBS} ${BULLET_LIBRARIES})
+add_executable(grid_mapper_sim  src/grid_mapper.cpp)
+target_link_libraries(grid_mapper_sim ${catkin_LIBRARIES})
+target_link_libraries(grid_mapper_sim ${OpenCV_LIBS} ${BULLET_LIBRARIES})
 add_dependencies(grid_mapper ${PROJECT_NAME}_generate_messages_cpp)
