potential field line follower added

--- a/src/khan/potential_field/CMakeLists.txt
+++ b/src/khan/potential_field/CMakeLists.txt
@@ -38,4 +38,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 add_executable(potential_field  src/potential_field.cpp)
 target_link_libraries(potential_field ${catkin_LIBRARIES})
 target_link_libraries(potential_field ${OpenCV_LIBS} ${BULLET_LIBRARIES})
+add_executable(potential_field_wall  src/potential_field_wall.cpp)
+target_link_libraries(potential_field_wall ${catkin_LIBRARIES})
+target_link_libraries(potential_field_wall ${OpenCV_LIBS} ${BULLET_LIBRARIES})
 add_dependencies(grid_mapper ${PROJECT_NAME}_generate_messages_cpp)
